--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
         <ul class="nav navbar-nav">
           <li class="nav-item active">
                   <a class="nav-link font-weight-bold" href="#"><img src="{% static 'images/welcome.png' %}">
-                      <span>Welcome, David Sun</span></a>
+                      <span>Welcome, {{ user.username }}</span></a>
                 </li>
                 <li class="nav-item font-weight-bold">
                   <a class="nav-link" href="#" ng-click="checkPermission()"><img src="{% static 'images/users.png' %}">
