--- a/templates/base.html
+++ b/templates/base.html
@@ -77,14 +77,15 @@
     </div>
 </div>
     <!-- Footer Start -->
-    <footer class="c-footer">
-         <hr ng-cloak>
-         <div class="container" ng-cloak>
+    <footer class="c-footer md-whiteframe-3dp" style="background-color: white;">
 
 
-                  <p>&copy; Allied Rent A Car 2017</p>
+<div class="container"><p>&copy; Allied Rent A Car 2017</p></div>
 
-         </div>
+
+
+
+
     </footer>
     <!-- Footer End -->
 
@@ -104,6 +105,7 @@
     <script src="{% static 'js/angular-aria.min.js' %}"></script>
     <script src="{% static 'js/angular-messages.min.js' %}"></script>
     <script src="{% static 'node_modules/angular-material/angular-material.min.js' %}"></script>
+    <script src="{% static 'js/dirPagination.js' %}"></script>
     <script src="{% static 'js/controller/alliedrentacar.js' %}"></script>
     <script src="{% static 'js/controller/nav_perm.js' %}"></script>
 
